# c64u-cpp_remote

./: CMakeLists.txt  HowToUse.md  README.md  attribution_statement  create_project.sh  create_u64_remote_cpp.sh  creds.json.example
json_examples/: cred.json
src/: discovery.cpp  discovery.h  main.cpp  u64_server.cpp  u64_server.h  util.cpp  util.h
